# FABulous

./: .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rules.verible_format  .rules.verible_lint  .svlint.toml  .test_durations_fallback  .vsg.yaml  AGENTS.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FABulous_fork.code-workspace  README.md  README_NIX.md  Taskfile.yml  build_hooks.py  config.rule  config.rules  dump  example.fasm  example.il  example.sv  example_unwrap.v  example_wrap.v  flake-minimal.nix  flake.nix  log  muxList.py  og  pyproject.toml  release-please-config.json  requirements.txt  result  ruff.toml  setup-dev-env.sh  shell.nix  (+14 more)
.devcontainer/: Dockerfile
.devcontainer/codespace/: devcontainer.json
.devcontainer/local/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: CIL_testing.yml  all-clean.yml  backwards-compatibility.yml  build_docs.yml  ci.yml  dependabot-auto-merge.yml  dismiss-stale-approvals.yml  docker-image.yml  fabric_gen.yml  gds-flow-ci.yml  hdl-linting.yml  librelane-plugin.yml  nightly_dependency_test.yml  nightly_full_auto_flow.yml  nightly_gds_test.yml  nix-env.yml  pre-commit-hooks.yml  publish_to_pypi.yml  pytest_testing.yml  release-please.yml  release_please.yml
FABulous/: FABulous.py  FABulous_API.py  FABulous_settings.py  __init__.py  caching.py  custom_exception.py  fabulous.py  fabulous_api.py  fabulous_settings.py  fsm.v  processpool.py  test.v
FABulous/FABulous_CLI/: FABulous.py  FABulous_CLI.py  cmd2_plugin.py  cmdCompleter.py  cmdParser.py  cmd_helper.py  cmd_pnr.py  cmd_synthesis.py  cmd_synthesis_script.py  completion_helpers.py  define.py  exception.py  helper.py  synthesis.py
FABulous/docs/: YAML_Migration_Guide.md  example_fabric.yaml
FABulous/fabric_cad/: bba.py  bit_gen.py  bitstreamSpec_generator.py  bitstream_generator.py  chip.py  chip_database_generation.py  chip_database_generator.py  define.py  extracting.tcl  fasm_parser.py  gen_bitstream_spec.py  gen_design_top_wrapper.py  gen_io_pin_config_yaml.py  gen_io_pin_config_yaml.py.backup  gen_npnr_model.py  gen_synth_file.py  graph_draw.py  graph_draw2.py  helper.py  model_generation_npnr.py  model_generation_vpr.py  prims_gen.py  synth_file_generator.py  techmap_gen.py
FABulous/fabric_definition/: Bel.py  ConfigMem.py  Fabric.py  Gen_IO.py  Mux.py  Port.py  SuperTile.py  SwitchMatrix.py  Tile.py  Wire.py  Yosys_obj.py  __init__.py  define.py  enum_and_type.py  fabric.py  fasm.py  super_tile.py  tile.py  yosys_obj.py
FABulous/fabric_generator/: ConfigMem_genenrator.py  __init__.py  (+18 more)
demo/: eFPGA_geometry.csv
docs/: Makefile  pyproject.toml  readme.md  requirements.txt
docs/source/: Building fabric.rst  Usage.rst  conf.py  conf_helper.py  fabric_automation.rst  fabric_definition.rst  index.md  index.rst  nix-env.md  publications.bib  publications.rst
docs/source/FPGA-to-bitstream/: Bitstream generation.rst  Nextpnr compilation.rst  Yosys compilation.rst  index.rst
docs/source/FPGA_CAD-tools/: index.rst
docs/source/_ext/: _doc_common.py  docstring_renderer.py  generate_cli_docs.py  generate_configvar_docs.py  generate_gds_variable_docs.py  generate_repl_docs.py  myst_docstring.py
docs/source/_static/: custom.css  toc_sidebar.js
docs/source/_templates/: flow_variable.md.jinja
docs/source/_templates/autoapi/: index.rst
docs/source/_templates/autoapi/python/: class.rst  data.rst  function.rst  method.rst  module.rst  property.rst
docs/source/_templates/sidebar/: brand.html
docs/source/developer_guide/: development.md
docs/source/getting_started/: codespaces.md  quickstart.md  quickstart.rst
docs/source/getting_started/installation/: cad-tool.md  index.md  nix-env.md
docs/source/misc/: contact.md  publications.md
docs/source/references/: FABulous.rst  FABulous_API.rst  FABulous_CLI.rst  code_generator.rst  fabric.rst  fabric_cad.rst  fabric_definition.rst  gen_fabric.rst  geometry_generator.rst  index.rst  model_gen_npnr.rst  parser.rst
docs/source/simulation/: simulation.rst
docs/source/user_guide/: building_fabric.rst  index.md  writing_a_plugin.md
docs/source/user_guide/building_doc/: bitstream_remapping.md  building_fabric.md  fabric_automation.md  fabric_definition.md  fabric_definition.rst  fabric_gds.md  index.md  librelane_plugin.md  primitives.md  supertiles.md  switch_matrix.md  tiles.md  timing_characterization.md
docs/source/user_guide/cli_doc/: CLI_feature.md  cli_feature.md  fabulous_variable.md  index.md
docs/source/user_guide/simulation/: emulation.md  emulation_on_fpga.md  gate_level_simulation.md  index.md  simulation.md  simulation.rst
docs/source/user_guide/tools/: index.md
docs/source/user_guide/using_doc/: bitstream_generation.md  index.md  pin_constraints.md  place_and_route.md  synthesis.md
docs/source/user_guide/using_doc/bitstream/: bitstream_generation.md  bitstream_generation.rst
docs/source/user_guide/using_doc/pnr/: index.md  nextpnr.md  nextpnr_compilation.md  pin_constraints.md
docs/source/user_guide/using_doc/synthesis/: index.md  yosys.md  yosys_compilation.md
fabric_generator/: fabric.py
fabulous/: fabulous.py  fabulous_api.py  fabulous_settings.py  processpool.py
memory_libmap_test/: memory_map.txt  test_script.ys
myProject/: PE.py  example_arch_gen.py  fabric.yaml  test_fabric.v
nix/: README.md  consumer.nix  default.nix  devshells.nix  docker-image.nix  package.nix  update-hashes.sh  versions.nix
schema/: std_cell_library.schema.json
scripts/: auto_find_librelane_callers.py  demo_config.json  extract_tile_dims.py  ghdl_format.py  lp_optimization_direct.py  remove_json_entries.py  run_tests.py  run_tile_optimization.py  svlint_wrapper.py  sync_tile_metrics.py  verible_wrapper.py
tests/: __init__.py  conftest.py  guide.md
timing_model/: FABulousTimingModel.py  Makefile  StaConnInterface.py  config.tcl  flow.tcl  merge.py  query_flat.py  query_generator.py  sta.tcl  synth.tcl  tm_model.py
yaml_demo/: FABulous.tcl  eFPGA_geometry.csv  fabric.csv  fabric.yaml
(+1524 files in other folders)
