[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "FABulous-FPGA"
authors = [{name = "Jing, Nguyen, Bea, Bardia, Dirk", email = "dirk.koch@manchester.ac.uk"}]
description = "FABulous FPGA Fabric generator"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]


dependencies = [
    'python-dotenv>=1.0.0',
    'loguru>=0.7.0',
    'fasm>=0.0.2',
    "hdlgen",
    "cocotb>=1.9.2",
    "cmd2>=2.5.11",
    "pydot>=3.0.4",
    "lark>=1.2.2",
    "jinja2>=3.1.6",
    "bitarray>=3.3.1",
    "ruamel-yaml>=0.18.10",
    "pyyaml>=6.0.2",
    "pyosys<0.52",
    "schemdraw[svgmath]>=0.20",
    "matplotlib>=3.10.3",
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
]

[project.urls]
"Homepage" = "https://github.com/FPGA-Research-Manchester/FABulous"
"Bug Tracker" = "https://github.com/FPGA-Research-Manchester/FABulous/issues"


[project.scripts]
FABulous = "FABulous.FABulous:main"
bit_gen = "FABulous.fabric_cad.bit_gen:bit_gen"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"


[tool.setuptools.packages.find]
exclude = ["docs, demo"]  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools.package-data]
mypkg = ["FABulous/**/*"]

[tool.uv.sources]
hdlgen = { path = "../HDLGen", editable = true }
