[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "FABulous-FPGA"
authors = [
  { name = "Jing, Nguyen, Bea, Bardia, Dirk", email = "dirk.koch@manchester.ac.uk" },
]
description = "FABulous FPGA Fabric generator"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]


dependencies = [
  'python-dotenv>=1.0.0',
  'loguru>=0.7.0',
  'fasm>=0.0.2',
  'requests>=2.0.0',
  'cmd2>=2',
  'bitarray>=3.3.0',
  "pydantic-settings>=2.10.1",
  "packaging>=25.0",
]

[project.urls]
Repository = "https://github.com/FPGA-Research/FABulous"
Documentation = "https://fabulous.readthedocs.io"
Releases = "https://github.com/FPGA-Research/FABulous/releases"
Issues = "https://github.com/FPGA-Research/FABulous/issues"
Discussions = "https://github.com/FPGA-Research/FABulous/discussions"


[project.scripts]
FABulous = "FABulous.FABulous:main"
bit_gen = "FABulous.fabric_cad.bit_gen:bit_gen"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"


[tool.setuptools.packages.find]
exclude = [
  "docs, demo",
] # exclude packages matching these glob patterns (empty by default)

[tool.setuptools.package-data]
mypkg = ["FABulous/**/*"]

[dependency-groups]
dev = [
  "cocotb>=1.9.2",
  "cocotb-test>=0.2.6",
  "pre-commit>=4.2.0",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "pytest-mock>=3.14.1",
  "pytest-split>=0.10.0",
  "ruff>=0.12.7",
  "pyyaml>=6.0.0",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["FABulous"]

[tool.coverage.report]
omit = ["*/__init__.py", "*/__pycache__/*", "tests/*", "demo/*", "docs/*"]
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "coverage_html"
