[build-system]
requires = ["setuptools>=83.0.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FABulous-FPGA"
authors = [
  { name = "Jing, Nguyen, Bea, Bardia, Dirk", email = "dirk.koch@manchester.ac.uk" },
]
description = "FABulous FPGA Fabric generator"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
license = { text = "Apache-2.0" }

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]


dependencies = [
  'python-dotenv>=1.0.0',
  'loguru>=0.7.0',
  'requests>=2.0.0',
  'cmd2>=4.1.2',
  'bitarray>=3.3.0',
  "pydantic>=2.12.1",
  "pydantic-settings>=2.10.1",
  "packaging>=25.0",
  "typer>=0.20.0",
  "FABulous-bit-gen>=0.3.1",
  'PyYAML>=6.0.0',
  "librelane>=3.0.0",
  "pick>=2.4.0",
  "pymoo>=0.6.1.5",
  "numpy>=2.5.1",
  "dill>=0.4.0",
  "networkx>=3.6.1",
  "sdf-timing",
  "ciel>=2.4.0",
  "go-task-bin>=3.40.0",
  "jinja2>=3.1.6",
]

[project.urls]
Repository = "https://github.com/FPGA-Research/FABulous"
Documentation = "https://fabulous.readthedocs.io"
Releases = "https://github.com/FPGA-Research/FABulous/releases"
Issues = "https://github.com/FPGA-Research/FABulous/issues"
Discussions = "https://github.com/FPGA-Research/FABulous/discussions"


[project.scripts]
FABulous = "fabulous.fabulous:main"
#alias for better usability
fabulous = "fabulous.fabulous:main"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
# Version stamped into git-less builds (Nix, sdist) where setuptools_scm cannot
# read a git tag. release-please bumps this to the release version inside the
# release PR via the toml extra-files updater in release-please-config.json.
fallback_version = "2.1.0"

[tool.setuptools.packages.find]
include = ["fabulous*", "fabulous_nix*", "librelane_plugin_fabulous*"]

[tool.setuptools.cmdclass]
build_py = "build_hooks.BuildPyWithFabulousNix"


[tool.setuptools.package-data]
fabulous = ["**/*"]

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = true
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = true
ignore-overloaded-functions = true
fail-under = 95
ignore-regex = ".*Like$"
# Exclude patterns - kept in sync with .gitignore
# Note: interrogate doesn't natively support .gitignore files
exclude = [
  "setup.py",
  "docs",
  "build",
  ".venv",
  "venv",
  "demo*",
  "tests",
  "**/__pycache__",
  "*.egg-info",
  ".vscode",
  "oss-cad-suite",
  "scripts",
  ".claude",
  "fabulous_nix",
  "librelane_plugin_fabulous",
  ".codex",
  "ttsim*",
]

[dependency-groups]
dev = [
  "cocotb>=2.0.0",
  "deptry>=0.20.0",
  "pre-commit>=4.2.0",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "pytest-mock>=3.14.1",
  "pytest-split>=0.11.0",
  "ruff>=0.12.7",
  "pyyaml>=6.0.0",
  "interrogate>=1.7.0",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["fabulous"]

[tool.coverage.report]
omit = [
  "*/__init__.py",
  "*/__pycache__/*",
  "tests/*",
  "demo/*",
  "docs/*",
  "build_hooks.py",
  "fabulous_nix",
  "librelane_plugin_fabulous",
]
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "coverage_html"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow (use --runslow to include)",
  "gl: gate-level simulation against a hardened fabric netlist (use --gl)",
]
addopts = "-m 'not slow and not gl'"

[tool.deptry]
extend_exclude = [
  "fabulous/fabric_generator/gds_generator/script",
  "docs",
  "build_hooks.py",
]

[tool.deptry.per_rule_ignores]
DEP002 = ["go-task-bin", "FABulous-bit-gen"]

[tool.deptry.package_module_name_map]
FABulous-bit-gen = "FABulous_bit_gen"

[tool.uv.sources]
sdf-timing = { git = "https://github.com/FPGA-Research/f4pga-sdf-timing.git" }

[tool.uv.extra-build-dependencies]
sdf-timing = ["vcs-versioning"]
