[project]
name = "fabulous-docs"
version = "0.1.0"
description = "Documentation build environment for FABulous FPGA"
requires-python = ">=3.12"
dependencies = [
  # FABulous package (for API documentation)
  "fabulous-fpga",
  # Sphinx core
  "Sphinx>=8.0.0",
  "docutils>=0.22.4",
  # Sphinx extensions
  "sphinx-copybutton>=0.5.0",
  "sphinxcontrib-bibtex>=2.6.0",
  "sphinx-autoapi>=3.0.0",            # Modern alternative to autosummary
  "myst-parser>=5.1.0",               # Markdown support (industry standard)
  "sphinxext-opengraph>=0.9.0",       # Social media preview cards
  # Theme
  "furo>=2024.8.6",                      # Modern, clean theme with built-in dark mode
  "jinja2>=3.1.6",
  "sphinx-llm[gen]>=0.4.1",
  "sphinxcontrib-mermaid>=2.1.0",
  "sphinx-reredirects>=1.1.0",

]

# fabulous-docs only bundles the docs build dependencies; it is not a
# distributable package. Mark it virtual so uv installs the dependencies
# (Sphinx, the extensions above, and the editable FABulous package) without
# trying to build it. This is also why there is no [build-system] table.
[tool.uv]
package = false

# Editable installation of FABulous package
[tool.uv.sources]
fabulous-fpga = { path = "..", editable = true }

[dependency-groups]
dev = ["sphinx-autobuild"]
